# xkivy

./: .none  CONTRIBUTING.md  README.md  UIXDocumentation.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml
src/xkivy/: __init__.py  colors.py  version.py
src/xkivy/effects/: __init__.py  clickeffect.py  scrolleffect.py  shadoweffect.py  uixeffect.py
src/xkivy/properties/: __init__.py
src/xkivy/thread_utils/: __init__.py
src/xkivy/uix/: button.py  dialog.py  dropdown.py  icon.py  image.py  label.py  layouts.py  navigation.py  popup.py  screenmanager.py  scrollview.py  sweeper.py  textfield.py
src/xkivy/utils/: controller.py  touchmanager.py
xkivy/: __init__.py  colors.py  version.py
xkivy/effects/: __init__.py  clickeffect.py  scrolleffect.py  shadoweffect.py  uixeffect.py
xkivy/uix/: __init__.py  button.py  dropdown.py  image.py  label.py  layouts.py  navigation.py  popup.py  scrollview.py  sweeper.py  textfield.py
xkivy/utils/: controller.py  touchmanager.py
