[build-system]
requires = ["setuptools>=65.6.3", "kivy>=2.0.0", "kivymd>=1.1.1"]
build-backend = "setuptools.build_meta"

[project]
name = "xkivy"
version = "1.1.1"
authors = [
  { name="Brian Musakwa", email="digreatbrian@gmail.com" },
]
description = "A kivy extension module to add functionality and making new widgets accessible to both kivy and kivymd." 
readme = "README.md"
keywords = ["kivy" ,"xkivy" ,"app" ,"kivymd"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/digreatbrian/xkivy"
"Bug Tracker" = "https://github.com/digreatbrian/xkivy/issues"
"UIX Docs" = "https://github.com/digreatbrian/xkivy/blob/main/UIXDocumentation.md"
