[metadata]
name = xkivy
version = 1.0
author = Brian Musakwa
author_email = digreatbrian@gmail.com
description = A python kivy extension framework for adding functionality and new widgets to both kivy and kivymd. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/digreatbrian/xkivy
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
package_dir == ./xkivy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ./xkivy
